--- a/css/menu.scss
+++ b/css/menu.scss
@@ -1,4 +1,5 @@
 @import 'global';
+@import 'color';
 @import 'header';
 
 
@@ -8,19 +9,21 @@ body {
 
 .menu_container {
     display       : grid;
-    // place-items: center;
     position      : relative;
     margin-top    : 20px;
     padding       : 20px;
 
    img {
-       border-radius: 35px;
        padding: 10px 0px;
    }
 }
 
 #appetizer {
         left: 60px;
+
+        >div>div {
+        @mixin image_hover(300px, 200px)         
+        }
     }
 
     #pasta {
@@ -34,6 +37,7 @@ body {
     #calzone {
         left: 210px;
     }
+
 .appetizer_container,
 .pasta_container,
 .pizza_container,
@@ -43,13 +47,10 @@ body {
     column-gap           : 20px;
     row-gap              : 20px;
     margin               : 30px 0px;
-    // box-shadow: 1px 1px 4px black;
 }
 
 .food {
-    border-left: white 1px solid;
-    border-top: white 1px solid;
-    // border-radius: 15px;
+    border-bottom: white 1px dashed;
     padding: 25px;
 }
 
