--- a/css/menu.scss
+++ b/css/menu.scss
@@ -4,39 +4,52 @@
 
 
 body {
-    background-color: $bg_color;
+    background-color: burlywood;
 }
 
 .menu_container {
-    display       : grid;
-    position      : relative;
-    margin-top    : 20px;
-    padding       : 20px;
+    display   : grid;
+    position  : relative;
+    margin-top: 20px;
+    padding   : 20px;
 
-   img {
-       padding: 10px 0px;
-   }
+}
+
+.menu_selector {
+    display              : grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    place-items          : center;
+    column-gap           : 2px;
+
+    >label {
+        padding         : 10px 0px;
+        background-color: burlywood;
+        width           : 100%;
+        text-align      : center;
+        transition      : background-color .4s ease-in;
+    }
+}
+
+.food {
+    @include image_hover(100%, 100%);
+    overflow: hidden;
 }
 
 #appetizer {
-        left: 60px;
+    left: 60px;
+}
 
-        >div>div {
-        @mixin image_hover(300px, 200px)         
-        }
-    }
+#pasta {
+    left: 110px;
+}
 
-    #pasta {
-        left: 110px;
-    }
+#pizza {
+    left: 160px;
+}
 
-    #pizza {
-        left: 160px;
-    }
-
-    #calzone {
-        left: 210px;
-    }
+#calzone {
+    left: 210px;
+}
 
 .appetizer_container,
 .pasta_container,
@@ -46,47 +59,79 @@ body {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     column-gap           : 20px;
     row-gap              : 20px;
-    margin               : 30px 0px;
+    background-color     : $bg_color;
 }
 
 .food {
     border-bottom: white 1px dashed;
-    padding: 25px;
+    padding      : 25px;
 }
 
 .price {
-    color: white;
-    font-size: 1.1em;
-    padding: 5px;
+    color     : white;
+    font-size : 1.1em;
+    padding   : 5px;
     text-align: end;
 }
 
 h3 {
     font-weight: 700;
-    text-align: center;
+    text-align : center;
 }
 
-input {
-    position: absolute;
-    top: 0px;
-    width: 40px;
-    height: 40px;
+// input {
+//     position: absolute;
+//     top     : -60px;
+//     width   : 200px;
+//     height  : 200px;
+//     opacity : 0%;
+//     transform: scaleY(.2);
+// }
+
+
+
+#appetizer:checked {
+
+    ~.menu_selector>label:nth-child(1) {
+        background-color: $bg_color;
+    }
+
+    ~.appetizer_container {
+        display: grid;
+    }
 }
 
-#appetizer:checked~.appetizer_container {
-    display: grid;
+#pasta:checked {
+
+    ~.menu_selector>label:nth-child(2) {
+        background-color: $bg_color;
+    }
+
+    ~.pasta_container {
+        display: grid;
+    }
 }
 
-#pasta:checked~.pasta_container {
-    display: grid;
+#pizza:checked {
+
+    ~.menu_selector>label:nth-child(3) {
+        background-color: $bg_color;
+    }
+
+    ~.pizza_container {
+        display: grid;
+    }
 }
 
-#pizza:checked~.pizza_container {
-    display: grid;
-}
+#calzone:checked {
 
-#calzone:checked~.calzone_container {
-    display: grid;
+    ~.menu_selector>label:nth-child(4) {
+        background-color: $bg_color;
+    }
+
+    ~.calzone_container {
+        display: grid;
+    }
 }
 
 @include scroll_up(10px, 10px);
