changed transition format of menu item

--- a/css/_color.scss
+++ b/css/_color.scss
@@ -2,7 +2,7 @@
 
 
 // background color of website
-$bg_color            : #ff3822;
+$bg_color            : rgb(255, 0, 0);
 
 
 // background color of footer
