--- a/css/_global.scss
+++ b/css/_global.scss
@@ -1,9 +1,9 @@
 * {
-    margin     : 0;
-    padding    : 0;
-    font-family: sans-serif;
+    margin        : 0;
+    padding       : 0;
+    font-family   : sans-serif;
     letter-spacing: 1px;
-    font-weight: normal;
+    font-weight   : normal;
 }
 
 img {
@@ -38,15 +38,12 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
 @mixin image_hover($width, $height) {
 
     .shell {
-        width        : $width;
-        // height       : $height;
-        // margin-top       : 10px;
-        border       : 2px solid $ihc_border;
-        // border-radius: 13%;
-        overflow     : hidden;
-        position     : relative;
-        text-align   : center; 
-        display: grid;
+        width      : $width;
+        border     : 2px solid $ihc_border;
+        overflow   : hidden;
+        position   : relative;
+        text-align : center;
+        display    : grid;
         place-items: center;
     }
 
@@ -57,7 +54,7 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
         overflow        : hidden;
         top             : 0;
         left            : 0;
-        opacity         : 0;
+        opacity         : 1;
         background-color: $ihc_mask;
         transition      : all 0.4s ease-in-out;
     }
@@ -66,71 +63,71 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
         display   : block;
         position  : relative;
         width     : $width;
+        transform : scale(1.1);
         transition: all 0.2s linear;
     }
 
     .shell h2 {
-        text-transform: uppercase;
-        color         : $ihc_text;
-        text-align    : center;
-        position      : relative;
-        font-size     : 1em;
-        padding       : 10px;
-        background    : $ihc_textbg;
-        margin        : 20px 0 0 0;
-        transform     : translateY(-100px);
-        opacity       : 0;
-        transition    : all 0.2s ease-in-out;
+        display: inline-block;
+        color            : $ihc_text;
+        position         : absolute;
+        font-size        : 1em;
+        font-weight:  600;
+        padding          : 5px;
+        // background    : $ihc_textbg;
+        bottom           : 0px;
+        left             : calc(50% - 26.5px);
+        opacity          : 1;
+        transition       : all 0.2s ease-in-out;
     }
 
     .shell p {
-        font-style: italic;
-        font-size : .7em;
-        position  : relative;
-        color     : $ihc_text;
-        padding   : 10px 20px 20px;
-        text-align: center;
-        transform : translateY(100px);
-        opacity   : 0;
-        transition: all 0.2s linear;
+        font-style   : italic;
+        font-size    : .7em;
+        position     : relative;
+        color        : $ihc_text;
+        padding      : 10px 20px 20px;
+        // transform : translateY(100px);
+        opacity      : 1;
+        transition   : all 0.2s linear;
     }
 
     .shell .info {
-        display        : inline-block;
-        text-decoration: none;
-        padding        : 7px 14px;
-        background     : $ihc_textbg;
-        color          : $ihc_text;
-        text-transform : uppercase;
-        box-shadow     : 0 0 1px black;
-        opacity        : 0;
-        transition     : all 0.2s ease-in-out
-    }
-
-    .shell .info:hover {
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.11);
+        display           : block;
+        padding           : 10px 20px;
+        font-size         : .8em;
+        background        : $ihc_textbg;
+        color             : $ihc_text;
+        opacity           : .75;
+        transition        : all 0.2s ease-in-out
     }
 
     .shell:hover img {
-        transform: scale(1.1);
+        transform: scale(1);
     }
 
     .shell:hover .mask {
-        opacity: 1;
+        background-color: rgba(255, 0, 0, 0);
     }
 
-    .shell:hover h2,
-    .shell:hover p,
-    .shell:hover .info {
-        opacity  : 1;
-        transform: translateY(0px);
+    
+
+    .shell:hover h2 {
+        left: calc(100% - 65px);
+        color: black;
+        font-size        : 1.2em;
     }
 
     .shell:hover p {
+        opacity: 0;
         transition-delay: 0.1s;
     }
 
     .shell:hover .info {
+        padding: 10px 0px 0px 0px;
+        // font-weight: 900;
+        color: black;
+        background-color: rgba(0, 0, 0, 0);
         transition-delay: 0.2s;
     }
 
@@ -276,17 +273,17 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
 
 @keyframes open {
     0% {
-        width: 1%;
+        width : 1%;
         height: 3%;
     }
 
     55% {
-        width: 80%;
+        width : 80%;
         height: 3%;
     }
 
     100% {
-        width: 80%;
+        width : 80%;
         height: 40%;
     }
 }
