--- a/css/menu.css
+++ b/css/menu.css
@@ -250,7 +250,7 @@ img {
   display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
-  background-color: #ff3822;
+  background-color: red;
   -webkit-box-shadow: 5px 5px 15px #b89944;
           box-shadow: 5px 5px 15px #b89944;
 }
@@ -354,7 +354,7 @@ img {
   #spacer {
     display: block;
     position: absolute;
-    background-color: #ff3822;
+    background-color: red;
     height: 10px;
     width: 100vw;
     top: 0;
@@ -372,7 +372,9 @@ img {
 }
 
 body {
-  background-color: burlywood;
+  background-image: url(https://img.wallpapersafari.com/desktop/1920/1080/11/16/4jUT2Y.jpg);
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .menu_container {
@@ -381,6 +383,10 @@ body {
   position: relative;
   margin-top: 20px;
   padding: 20px;
+}
+
+.menu_container input {
+  display: none;
 }
 
 .menu_selector {
@@ -398,8 +404,9 @@ body {
   background-color: burlywood;
   width: 100%;
   text-align: center;
-  -webkit-transition: background-color .4s ease-in;
-  transition: background-color .4s ease-in;
+  -webkit-transition: all .4s ease-in;
+  transition: all .4s ease-in;
+  font-weight: 400;
 }
 
 .food {
@@ -424,7 +431,7 @@ body {
   overflow: hidden;
   top: 0;
   left: 0;
-  opacity: 0;
+  opacity: 1;
   background-color: rgba(255, 86, 8, 0.7);
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
@@ -434,22 +441,22 @@ body {
   display: block;
   position: relative;
   width: 100%;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
 
 .food .shell h2 {
-  text-transform: uppercase;
+  display: inline-block;
   color: white;
-  text-align: center;
-  position: relative;
+  position: absolute;
   font-size: 1em;
-  padding: 10px;
-  background: black;
-  margin: 20px 0 0 0;
-  -webkit-transform: translateY(-100px);
-          transform: translateY(-100px);
-  opacity: 0;
+  font-weight: 600;
+  padding: 5px;
+  bottom: 0px;
+  left: calc(50% - 26.5px);
+  opacity: 1;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
@@ -460,56 +467,47 @@ body {
   position: relative;
   color: white;
   padding: 10px 20px 20px;
-  text-align: center;
-  -webkit-transform: translateY(100px);
-          transform: translateY(100px);
-  opacity: 0;
+  opacity: 1;
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
 
 .food .shell .info {
-  display: inline-block;
-  text-decoration: none;
-  padding: 7px 14px;
+  display: block;
+  padding: 10px 20px;
+  font-size: .8em;
   background: black;
   color: white;
-  text-transform: uppercase;
-  -webkit-box-shadow: 0 0 1px black;
-          box-shadow: 0 0 1px black;
-  opacity: 0;
+  opacity: .75;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
-.food .shell .info:hover {
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.11);
-          box-shadow: 0 0 5px rgba(0, 0, 0, 0.11);
-}
-
 .food .shell:hover img {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .food .shell:hover .mask {
-  opacity: 1;
+  background-color: rgba(255, 0, 0, 0);
 }
 
-.food .shell:hover h2,
-.food .shell:hover p,
-.food .shell:hover .info {
-  opacity: 1;
-  -webkit-transform: translateY(0px);
-          transform: translateY(0px);
+.food .shell:hover h2 {
+  left: calc(100% - 65px);
+  color: black;
+  font-size: 1.2em;
 }
 
 .food .shell:hover p {
+  opacity: 0;
   -webkit-transition-delay: 0.1s;
           transition-delay: 0.1s;
 }
 
 .food .shell:hover .info {
+  padding: 10px 0px 0px 0px;
+  color: black;
+  background-color: rgba(0, 0, 0, 0);
   -webkit-transition-delay: 0.2s;
           transition-delay: 0.2s;
 }
@@ -535,12 +533,12 @@ body {
 .pizza_container,
 .calzone_container {
   display: none;
-  -ms-grid-columns: (minmax(250px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   -webkit-column-gap: 20px;
           column-gap: 20px;
   row-gap: 20px;
-  background-color: #ff3822;
+  background-color: red;
 }
 
 .food {
@@ -561,7 +559,8 @@ h3 {
 }
 
 #appetizer:checked ~ .menu_selector > label:nth-child(1) {
-  background-color: #ff3822;
+  background-color: red;
+  color: white;
 }
 
 #appetizer:checked ~ .appetizer_container {
@@ -570,7 +569,8 @@ h3 {
 }
 
 #pasta:checked ~ .menu_selector > label:nth-child(2) {
-  background-color: #ff3822;
+  background-color: red;
+  color: white;
 }
 
 #pasta:checked ~ .pasta_container {
@@ -579,7 +579,8 @@ h3 {
 }
 
 #pizza:checked ~ .menu_selector > label:nth-child(3) {
-  background-color: #ff3822;
+  background-color: red;
+  color: white;
 }
 
 #pizza:checked ~ .pizza_container {
@@ -588,7 +589,8 @@ h3 {
 }
 
 #calzone:checked ~ .menu_selector > label:nth-child(4) {
-  background-color: #ff3822;
+  background-color: red;
+  color: white;
 }
 
 #calzone:checked ~ .calzone_container {
