--- a/css/_global.scss
+++ b/css/_global.scss
@@ -51,6 +51,8 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
         width           : 100%;
         height          : 100%;
         position        : absolute;
+        display         : grid;
+        place-items     : center;
         overflow        : hidden;
         top             : 0;
         left            : 0;
@@ -68,38 +70,45 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
     }
 
     .shell h2 {
-        display: inline-block;
-        color            : $ihc_text;
-        position         : absolute;
-        font-size        : 1em;
-        font-weight:  600;
-        padding          : 5px;
-        // background    : $ihc_textbg;
-        bottom           : 0px;
-        left             : calc(50% - 26.5px);
-        opacity          : 1;
-        transition       : all 0.2s ease-in-out;
+        display    : inline-block;
+        color      : $ihc_text;
+        position   : relative;
+        font-size  : 1em;
+        font-weight: 800;
+        // padding    : 5px;
+        align-self : end;
+        opacity    : 1;
+        transition : all 0.2s ease-in-out;        
+        text-shadow     : 0px 0px 0px white;
+        justify-self: end;
+        right:calc(50% - 31.5px);
     }
 
     .shell p {
         font-style   : italic;
-        font-size    : .7em;
+        font-size    : .7rem;
         position     : relative;
         color        : $ihc_text;
-        padding      : 10px 20px 20px;
-        // transform : translateY(100px);
         opacity      : 1;
         transition   : all 0.2s linear;
+        padding: 0px 5px;
+        font-weight: 600;
     }
 
-    .shell .info {
-        display           : block;
-        padding           : 10px 20px;
-        font-size         : .8em;
-        background        : $ihc_textbg;
-        color             : $ihc_text;
-        opacity           : .75;
-        transition        : all 0.2s ease-in-out
+    .shell h3 {
+        position: relative;
+        display   : inline-block;
+        width: 100%;
+        padding   : 5px;
+        font-size : .8rem;
+        background: $ihc_textbg;
+        color     : $ihc_text;
+        opacity   : .75;
+        align-self: start;
+        transition: all 0.2s ease-in-out;        
+        text-shadow     : 0px 0px 0px white;
+        font-weight: 700;
+        right: 0px;
     }
 
     .shell:hover img {
@@ -110,25 +119,30 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
         background-color: rgba(255, 0, 0, 0);
     }
 
-    
-
     .shell:hover h2 {
-        left: calc(100% - 65px);
-        color: black;
-        font-size        : 1.2em;
+        // justify-self: end;
+        color    : black;
+        font-size: 1.1em;        
+        text-shadow     : 1px 1px 3px white;
+        opacity: 1;
+        text-align: right;
+        right: 0px;
     }
 
     .shell:hover p {
-        opacity: 0;
+        opacity         : 0;
         transition-delay: 0.1s;
     }
 
-    .shell:hover .info {
-        padding: 10px 0px 0px 0px;
-        // font-weight: 900;
-        color: black;
+    .shell:hover h3 {
+        text-shadow     : 1px 1px 2px white;
+        color           : black;
         background-color: rgba(0, 0, 0, 0);
         transition-delay: 0.2s;
+        font-weight: 900;
+        justify-self: start;
+        text-align: left;
+        left: 0px;
     }
 
 }
