--- a/css/_global.scss
+++ b/css/_global.scss
@@ -70,45 +70,46 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
     }
 
     .shell h2 {
-        display    : inline-block;
-        color      : $ihc_text;
-        position   : relative;
-        font-size  : 1em;
-        font-weight: 800;
+        display       : inline-block;
+        color         : $ihc_text;
+        position      : relative;
+        font-size     : 1em;
+        font-weight   : 800;
         // padding    : 5px;
-        align-self : end;
-        opacity    : 1;
-        transition : all 0.2s ease-in-out;        
-        text-shadow     : 0px 0px 0px white;
-        justify-self: end;
-        right:calc(50% - 31.5px);
+        align-self    : end;
+        opacity       : 1;
+        transition    : all 0.2s ease-in-out;
+        text-shadow   : 0px 0px 0px white;
+        justify-self  : end;
+        right         : calc(50% - 31.5px);
     }
 
     .shell p {
-        font-style   : italic;
-        font-size    : .7rem;
-        position     : relative;
-        color        : $ihc_text;
-        opacity      : 1;
-        transition   : all 0.2s linear;
-        padding: 0px 5px;
+        font-style : italic;
+        font-size  : .7rem;
+        position   : relative;
+        color      : $ihc_text;
+        opacity    : 1;
+        transition : all 0.2s linear;
+        padding    : 0px 5px;
         font-weight: 600;
     }
 
     .shell h3 {
-        position: relative;
-        display   : inline-block;
-        width: 100%;
-        padding   : 5px;
-        font-size : .8rem;
-        background: $ihc_textbg;
-        color     : $ihc_text;
-        opacity   : .75;
-        align-self: start;
-        transition: all 0.2s ease-in-out;        
-        text-shadow     : 0px 0px 0px white;
+        position   : relative;
+        display    : inline-block;
+        width      : 100%;
+        padding    : 5px;
+        font-size  : .8rem;
+        background : $ihc_textbg;
+        color      : $ihc_text;
+        opacity    : .75;
+        align-self : start;
+        transition : all 0.2s ease-out;
+        text-shadow: 0px 0px 0px white;
         font-weight: 700;
-        right: 0px;
+        left      : 10px;
+        transform: translateX(-10px);
     }
 
     .shell:hover img {
@@ -121,12 +122,12 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
 
     .shell:hover h2 {
         // justify-self: end;
-        color    : black;
-        font-size: 1.1em;        
-        text-shadow     : 1px 1px 3px white;
-        opacity: 1;
-        text-align: right;
-        right: 0px;
+        color      : black;
+        font-size  : 1.1em;
+        text-shadow: 1px 1px 3px white;
+        opacity    : 1;
+        text-align : right;
+        right      : 0px;
     }
 
     .shell:hover p {
@@ -135,14 +136,14 @@ $ihc_mask  : rgba(255, 86, 8, 0.7);
     }
 
     .shell:hover h3 {
-        text-shadow     : 1px 1px 2px white;
-        color           : black;
-        background-color: rgba(0, 0, 0, 0);
-        transition-delay: 0.2s;
-        font-weight: 900;
-        justify-self: start;
-        text-align: left;
-        left: 0px;
+        text-shadow        : 1px 1px 2px white;
+        color              : black;
+        background         : rgba(0, 0, 0, 0);
+        // transition-delay: 0.2s;
+        font-weight        : 900;
+        justify-self       : start;
+        text-align         : left;
+        left               : 5px;
     }
 
 }
